--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -259,3 +259,14 @@
   left: auto !important;
   transform: none !important;
 }
+
+// 属性组件外边框
+.tree-border {
+  border: 1px solid var(--art-card-border) !important;
+  border-radius: calc(var(--custom-radius) / 2 + 2px) !important;
+  width: 100%;
+  max-height: 400px;
+  overflow: hidden;
+  overflow-y: auto;
+  transition: all 0.3s ease;
+}
